@@ -24,7 +24,6 @@ import static org.mockito.Mockito.when;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertFalse;
 import static org.testng.Assert.assertTrue;
-import com.google.common.collect.ImmutableMap;
 import io.netty.buffer.ByteBuf;
 import java.util.Map;
 import org.apache.pulsar.common.api.proto.KeyValue;
@@ -35,8 +34,10 @@ import org.testng.annotations.Test;
 public class RawMessageImplTest {
 
     private static final String HARD_CODE_KEY = "__pfn_input_topic__";
-    private static final String KEY_VALUE_FIRST= "persistent://first-tenant-value/first-namespace-value/first-topic-value";
-    private static final String KEY_VALUE_SECOND = "persistent://second-tenant-value/second-namespace-value/second-topic-value";
+    private static final String KEY_VALUE_FIRST =
+            "persistent://first-tenant-value/first-namespace-value/first-topic-value";
+    private static final String KEY_VALUE_SECOND =
+            "persistent://second-tenant-value/second-namespace-value/second-topic-value";
     private static final String HARD_CODE_KEY_ID = "__pfn_input_msg_id__";
     private static final String HARD_CODE_KEY_ID_VALUE  = "__pfn_input_msg_id_value__";
 
@@ -87,7 +88,7 @@ public class RawMessageImplTest {
         // Non-batched message's singleMessageMetadata is null
         RawMessage msg = RawMessageImpl.get(refCntMsgMetadata, null, null, 0, 0, 0);
         assertTrue(msg.hasBase64EncodedKey());
-        assertEquals(msg.getProperties(), ImmutableMap.of("key1", "value1"));
+        assertEquals(msg.getProperties(), Map.of("key1", "value1"));
         assertEquals(msg.getEventTime(), 100L);
     }
 
@@ -108,7 +109,7 @@ public class RawMessageImplTest {
 
         RawMessage msg = RawMessageImpl.get(refCntMsgMetadata, singleMessageMetadata, null, 0, 0, 0);
         assertFalse(msg.hasBase64EncodedKey());
-        assertEquals(msg.getProperties(), ImmutableMap.of("key2", "value2"));
+        assertEquals(msg.getProperties(), Map.of("key2", "value2"));
         assertEquals(msg.getEventTime(), 200L);
     }
 }
